--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,7 +1,7 @@
 .header {
     display: grid;
     grid-template-columns: 33% 33% 33%;
-    padding: 56px 360px;
+    padding: 56px 360px 16px;
 }
 
 .nav {
