--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .main {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: calc(50% - 20px) calc(50% - 20px);
     padding: 40px 380px;
+    gap: 40px;
 }
