--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
+body {
+    overflow: hidden;
+      
+    @media screen and (max-width : 1024px) {
+      overflow: auto;
+    }
+}
+
 .main {
     display: grid;
     grid-template-columns: calc(50% - 20px) calc(50% - 20px);
-    padding: 40px 380px;
+    padding: 40px 340px;
     gap: 40px;
+
+    @media screen and (max-width : 1440px) {
+        padding: 40px 140px;
+    }
+
+    @media screen and (max-width : 1024px) {
+        grid-template-columns: 100%;
+    }
+    
+    @media screen and (max-width : 800px) {
+        padding: 12px;
+    }
 }
