--- a/src/components/burger-constructor/burger-constructor-item/burger-constructor-item.module.css
+++ b/src/components/burger-constructor/burger-constructor-item/burger-constructor-item.module.css
@@ -1,7 +1,11 @@
 .item {
     display: flex;
     align-items: center;
-    gap: 8px;
+    justify-content: space-between;
+}
+
+.burgerConstructorElementWrapper {
+    width: calc(100% - 32px);
 }
 
 .burgerConstructorElement {
