--- a/src/components/burger-ingridients/burger-ingridients.module.css
+++ b/src/components/burger-ingridients/burger-ingridients.module.css
@@ -5,5 +5,10 @@
 
 .list {
     overflow-y: auto;
-    height: calc(100vh - 335px);
+    overflow-x: hidden;
+    height: calc(100vh - 309px);
+    
+    @media screen and (max-width : 1024px) {
+        height: calc(100vh - 285px);
+    }
 }
