--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,44 @@
 body {
     overflow: hidden;
       
-    @media screen and (max-width : 1024px) {
+    @media screen and (max-width : 1270px) {
       overflow: auto;
     }
 }
 
 .main {
     display: grid;
-    grid-template-columns: calc(50% - 20px) calc(50% - 20px);
+    grid-template-columns: calc(100% - 660px) 620px;
     padding: 40px 340px;
     gap: 40px;
 
-    @media screen and (max-width : 1440px) {
+    @media screen and (max-width : 1870px) {
         padding: 40px 140px;
     }
 
-    @media screen and (max-width : 1024px) {
+    @media screen and (max-width : 1470px) {
+        padding: 40px;
+    }
+
+    @media screen and (max-width : 1270px) {
         grid-template-columns: 100%;
     }
     
     @media screen and (max-width : 800px) {
         padding: 12px;
     }
+}
+
+.burgerIngridients-wrapper {
+    min-width: 600px;
+    
+    @media screen and (max-width : 624px) {
+        min-width: unset;
+    }
+}
+
+.burgerConstructor-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
