--- a/src/components/burger-ingredients/ingredient-category/ingredient-category.module.css
+++ b/src/components/burger-ingredients/ingredient-category/ingredient-category.module.css
@@ -1,10 +1,10 @@
-.ingridients {
+.ingredients {
     margin: 24px 16px;
     display: flex;
     flex-wrap: wrap;
     gap: 32px 24px;
 }
 
-.ingridient {
+.ingredient {
     width: calc(50% - 12px);
 }
