--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,6 +1,6 @@
 .burgerConstructor {
-    padding: 116px 36px 0;
-    max-width: 568px;
+    margin: 116px 36px 0;
+    width: 100%;
 }
 
 .orderWrapper {
