--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -34,3 +34,16 @@
     flex-direction: column;
     align-items: center;
 }
+
+.loaderWrapper {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    opacity: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 50;
+}
