--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -49,3 +49,13 @@
     border-width: 0;
     cursor: pointer;
 }
+
+.link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 20px;
+    color: unset;
+    text-decoration: none;
+    cursor: pointer;
+}
