authentication and protect routes

--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     gap: 24px;
 }
+
+.buttonsWrapper {
+    width: 480px;
+    display: flex;
+    justify-content: end;
+}
