--- a/src/pages/reset-password-page/reset-password-page.module.css
+++ b/src/pages/reset-password-page/reset-password-page.module.css
@@ -1,4 +1,4 @@
-.resetPasswordFormWrapper {
+.page {
     height: calc(100vh - 112px);
     display: flex;
     flex-direction: column;
@@ -17,6 +17,13 @@
     @media screen and (max-width : 800px) {
         height: calc(100vh - 96px);
     }
+}
+
+.formWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
 }
 
 .link {
