--- a/src/pages/forgot-password-page/forgot-password-page.module.css
+++ b/src/pages/forgot-password-page/forgot-password-page.module.css
@@ -1,5 +1,5 @@
 .page {
-    height: calc(100vh - 112px);
+    height: calc(100vh - 112px - 80px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,15 +7,15 @@
     gap: 24px;
 
     @media screen and (max-width : 1470px) {
-        height: calc(100vh - 136px);
+        height: calc(100vh - 136px - 80px);
     }
 
     @media screen and (max-width : 1024px) {
-        height: calc(100vh - 112px);
+        height: calc(100vh - 112px - 80px);
     }
     
     @media screen and (max-width : 800px) {
-        height: calc(100vh - 96px);
+        height: calc(100vh - 96px - 24px);
     }
 }
 
